<resources>
    <string name="app_name">Listas</string>

    <!--Menumain seleccion de tareas-->
    <string name="title_menumain" translatable="false">Listas de tareas</string>
    <string name="menumain_categoria" translatable="false">Categorias</string>
    <string name="tareas_inferior" translatable="false">tareas</string>

    <string name="todo_dialog_add_task">Añade la tarea</string>
    <string name="todo_dialag_category_business">Negocios</string>
    <string name="todo_dialag_category_Personal">Personal</string>
    <string name="todo_dialag_category_other">Otros</string>
    <string name="dialog_add_task">Añade tarea</string>
</resources>
