<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/personal_category">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_dialog_add_task"
        android:textColorHint="@color/colorDeApp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"/>

    <RadioGroup
        android:id="@+id/rGrupCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/rbBusiness"
        style="@style/rbGeneralBtn"
        android:buttonTint="@color/bussiness_category"
        android:text="@string/todo_dialag_category_business"/>


        <RadioButton
            android:id="@+id/rbPersonal"
            style="@style/rbGeneralBtn"
            android:buttonTint="@color/other_category"
            android:text="@string/todo_dialag_category_Personal"/>


        <RadioButton
            android:id="@+id/rbOtros"
            style="@style/rbGeneralBtn"
            android:buttonTint="@color/DeDisabled"
            android:text="@string/todo_dialag_category_other"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:backgroundTint="@color/colorDeAccent"
        android:text="@string/dialog_add_task"/>
</LinearLayout>