<?xml version="1.0" encoding="utf-8"?>

<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorDeApp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/title_menumain"
            android:textAllCaps="true"
            android:layout_marginVertical="44dp"
            android:layout_marginHorizontal="32dp"/>

        <TextView
            android:text="@string/menumain_categoria"
            style="@style/TodoSubtitle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardCategiria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/tareas_inferior"
            style="@style/TodoSubtitle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardCategiria2"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="23dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/agrTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:tint="@color/white"
        app:fabSize="normal"
        app:backgroundTint="@color/colorDeAccent"
        android:src="@drawable/plus_solid"
        android:layout_margin="32dp"/>

</FrameLayout>
